<resources>
    <string name="app_name">AndroidApp</string>
    <string name="message">Please select the author and year of publication</string>
    <string name="rb_1937">1937</string>
    <string name="rb_1939">1939</string>
    <string name="rb_1953">1953</string>
    <string name="rb_1968">1968</string>
    <string name="rb_1982">1982</string>
    <string name="rb_1997">1997</string>
    <string name="ok">OK</string>
    <string name="choice_message">You chose %1$s, year %2$s.</string>
    <string name="incorrect_input">Please select author and year of publication</string>
    <string name="empty" />
    <string name="j_r_r_tolkien">J.R.R. Tolkien</string>
    <string name="agatha_christie">Agatha Christie</string>
    <string name="ray_bradbury">Ray Bradbury</string>
    <string name="robert_sheckley">Robert Sheckley</string>
    <string name="stephen_king">Stephen King</string>
    <string name="j_k_rowling">J.K. Rowling</string>

    <string-array name="spinner_items">
        <item>@string/empty</item>
        <item>@string/j_r_r_tolkien</item>
        <item>@string/agatha_christie</item>
        <item>@string/ray_bradbury</item>
        <item>@string/robert_sheckley</item>
        <item>@string/stephen_king</item>
        <item>@string/j_k_rowling</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>