<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/message"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:padding="20dp"
        android:text="@string/message"
        android:textSize="20sp"
        android:background="@color/purple_200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/message"
        android:minHeight="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/selection"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textSize="20sp"
        android:background="@color/purple_200"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"

        app:layout_constraintTop_toBottomOf="@+id/message">

        <RadioButton
            android:id="@+id/rb_1937"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_1937" />
        <RadioButton
            android:id="@+id/rb_1939"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_1939" />
        <RadioButton
            android:id="@+id/rb_1953"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_1953" />
        <RadioButton
            android:id="@+id/rb_1968"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_1968" />
        <RadioButton
            android:id="@+id/rb_1982"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_1982" />
        <RadioButton
            android:id="@+id/rb_1997"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_1997" />
    </RadioGroup>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@+id/radios"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>